trying to use HOC components to set theme

--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -1,4 +1,8 @@
+:root {
+  --jarcl-button-bg-color: coral;
+}
+
 .jarcl-button {
   border-radius: 3px;
-  background-color: #fff;
+  background-color: var(--jarcl-button-bg-color);
 }
